--- a/index.html
+++ b/index.html
@@ -19,4 +19,4 @@
                      ~~--._  l_   )                        \
                            ~-._~~~---._,____..---           \
                                ~----"~       \
-                                              \
+                                              \index2.html
